--- a/assignment_4.rmd
+++ b/assignment_4.rmd
@@ -11,8 +11,8 @@ suppressPackageStartupMessages(library(gridExtra))
 ## Exploring gather() and spread() for data reshaping
 The prompt I have chosen to explore is acivity 2:
 
--* Make a tibble with one row per year and columns for life expectancy for two or more countries.
--* Use `knitr::kable()` to make this table look pretty in your rendered homework.
+* Make a tibble with one row per year and columns for life expectancy for two or more countries.
+* Use `knitr::kable()` to make this table look pretty in your rendered homework.
 Take advantage of this new data shape to scatterplot life expectancy for one country against that of another.
 
 
