--- a/assignment_4.rmd
+++ b/assignment_4.rmd
@@ -74,7 +74,7 @@ grid.arrange(p1,p2,p3,nrow=2,ncol=2)
 The prompt I have chosen to explore is **acivity 1**:
 
 First we create dataframe that complementary to Gapminder.
-we started with reading in a new dataset which contained the language spoken by the specific country.
+we started with reading in a new dataset which contained the language spoken by the specific country **country_list.csv**.
 
 ```{r}
 temp <- read_csv("country_list.csv")
